src/objects/Equipment_Repair_Log__c.object
<CustomObject>
    <description>Equipment Repair Log for Assets</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Equipment Repair Logs</relationshipLabel>
        <relationshipName>Equipment_Repair_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Equipment Repair Logs</relationshipLabel>
        <relationshipName>Equipment_Repair_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CRIDate__c</fullName>
        <label>CRI Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClinicReportedIssue__c</fullName>
        <label>Clinic Reported Issue</label>
        <picklist>
            <picklistValues>
                <fullName>VGA - No Video Output</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VGA - Color Output Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VGA - Cable Bad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio - No Audio Output</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio - Static Feed Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RS232 - No Control Output/Input</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Button - No LED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Button - Unable to Depress: Can&apos;t Turn Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Supply - Will not power the player: LED off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOBO - Shutting Down after Boot: Possible Thermal Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOBO - Hanging on BIOS Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAM - Player will not boot: BIOS RAM Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDD - No Hard Drive Found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDD - Smart Errors Reported</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDD - BusyBox Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSD - BusyBox Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OS - FSCK screen: Unable to Repair (Press F1 to Fix)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OS - Grub Rescue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OS - Hang on Boot Process: Will not load BSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display - No Video Output</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display - Color Output Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display - Lines through the Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display - No Audio Output</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispaly - RS232: No Control Output/Input</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispaly - Damaged Bezel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display - Damaged Screen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinic - Deinstallation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIA - Sprint Connection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIA - Clinic Network Unavailable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DateCreated__c</fullName>
        <label>Date Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateModified__c</fullName>
        <label>Date Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateofRepair2__c</fullName>
        <label>Date of Repair (2)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateofRepair__c</fullName>
        <label>Date of Repair</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DiagContextDLd__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diag-Context DL&apos;d</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DiagHDD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diag-HDD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DiagImaged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diag-Imaged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DiagMEM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diag-MEM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DiagRedeploy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diag-Redeploy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DiagnosticsNotes__c</fullName>
        <label>Diagnostics Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Diagnostics__c</fullName>
        <label>Diagnostics</label>
        <picklist>
            <picklistValues>
                <fullName>All Diagnostics Passed - Ready for Redoployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDD Failed - Out of Warranty: Needs replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDD Failed - In Warranty: Send to Sherlock RMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mem Failed - Out of Warranty: Needs replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mem Failed - In Warranty: Send to Sherlock RMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOBO - Will Not Output Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOBO - NIC Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOBO - Thermal Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOBO - Will not Post</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IssueFoundDate__c</fullName>
        <label>Issue Found Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IssueFoundNotes__c</fullName>
        <label>Issue Found Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IssueFound__c</fullName>
        <label>Issue Found</label>
        <picklist>
            <picklistValues>
                <fullName>OS Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSD Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grub Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Supply Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HHD Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serial Port Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIC Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VGA Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dead CMOS Battery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memory Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Damage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Surge Damage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint Card Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken Power Button</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Fault Found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermal Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDD Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSD Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motherboard Post Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Redeployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIOS Firmware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepared for Sprint Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motherboard Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back From Sherlock RMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIOS Will Not Post</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read-Only/Corrupted File System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Button LED Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Player Dirty - Drywall Dust/Plaster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VGA - No Video Output</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LastModifiedBy__c</fullName>
        <label>Last Modified By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogNotes__c</fullName>
        <label>Log Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QuickBase_ID__c</fullName>
        <label>QuickBase ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RMADiagnosticsDate__c</fullName>
        <label>RMA Diagnostics Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RMADiagnostics__c</fullName>
        <label>RMA Diagnostics</label>
        <picklist>
            <picklistValues>
                <fullName>All Diagnostics Passed - Ready for Redoployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDD Failed - Send back to Sherlock RMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mem Failed - Send back to Sherlock RMA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RMADiagsNotes__c</fullName>
        <label>RMA Diags Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RMAIssueDate__c</fullName>
        <label>RMA Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RMAIssueFound__c</fullName>
        <label>RMA Issue Found</label>
        <picklist>
            <picklistValues>
                <fullName>HDD - Failed Smart Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDD - Failed Unrecoverable Sectors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDD - Failed All Tests unable to HDD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mem - Failed Memtest 4.20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOBO - Will Not Output Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOBO - NIC Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOBO - Thermal Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOBO - Will Not Post</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RMAReturnRepairDate__c</fullName>
        <label>RMA Return/Repair Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RMAReturnRepair__c</fullName>
        <label>RMA Return/Repair</label>
        <picklist>
            <picklistValues>
                <fullName>Sherlock RMA - Replaced Motherboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherlock RMA - Replaced Harddrive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherlock RMA - Memory Unseated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherlock RMA - Replaced Memory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherlock RMA - Replaced Heatsink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherlock RMA - Replaced MOBO &amp; HDD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RMA_Return_Notes__c</fullName>
        <label>RMA Return/Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReceivedatLogistics__c</fullName>
        <label>Received at Logistics</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RecordID__c</fullName>
        <label>Record ID#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecordOwner__c</fullName>
        <label>Record Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Case_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Case/Work Order</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Equipment Repair Logs</relationshipLabel>
        <relationshipName>Equipment_Repair_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RepairAction2__c</fullName>
        <label>Repair Action (2)</label>
        <picklist>
            <picklistValues>
                <fullName>Player - Replaced Harddrive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Player - Replaced Memory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Player OS Inconsistency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display - Replaced Powerboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair Damaged Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replaced CMOS Battery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display - Repaired Power Supply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Player - Replaced CPU Fan Assembly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repaired Power Supply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherlock RMA - Replaced Motherboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherlock RMA - Replaced Harddrive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherlock RMA - Memory Unseated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherlock RMA - Replaced Memory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Trouble Found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherlock RMA - Serial Port Adapter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherlock RMA - DC Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherlock RMA - Replace Power Button</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherlock RMA - Replace Heat Sink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Player - Ready for Redeployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Sherlock RMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIOS Firmware Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Made Sprint Booster Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepared for Sprint Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manually Repaired OS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleaned System in and out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replaced Power Button</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMI-RMA Pile (Player out of Warranty)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned from Clinic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RepairActionNotes2__c</fullName>
        <label>Repair Action Notes (2)</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RepairActionNotes__c</fullName>
        <label>Repair Action Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RepairAction__c</fullName>
        <label>Repair Action</label>
        <picklist>
            <picklistValues>
                <fullName>Player - Replaced Harddrive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Player - Replaced Memory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Player OS Inconsistency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display - Replaced Powerboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair Damaged Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replaced CMOS Battery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display - Repaired Power Supply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Player - Replaced CPU Fan Assembly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repaired Power Supply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherlock RMA - Replaced Motherboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherlock RMA - Replaced Harddrive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherlock RMA - Memory Unseated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherlock RMA - Replaced Memory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Trouble Found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherlock RMA - Serial Port Adapter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherlock RMA - DC Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherlock RMA - Replace Power Button</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherlock RMA - Replace Heat Sink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Player - Ready for Redeployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Sherlock RMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIOS Firmware Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Made Sprint Booster Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepared for Sprint Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manually Repaired OS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleaned System in and out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replaced Power Button</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMI-RMA Pile (Player out of Warranty)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned from Clinic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOBO - Replaced CMOS Battery (Age)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TRIDate__c</fullName>
        <label>TRI Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TechReportedIssue__c</fullName>
        <label>Tech Reported Issue</label>
        <picklist>
            <picklistValues>
                <fullName>VGA - No Video Output</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VGA - Color Output Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VGA - Cable Bad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio - No Audio Output</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio - Static Feed Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RS232 - No Control Output/Input</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Button - No LED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Button - Unable to Depress: Can&apos;t Turn Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Supply - Will not power the player: LED off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOBO - Shutting Down after Boot: Possible Thermal Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOBO - Hanging on BIOS Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAM - Player will not boot: BIOS RAM Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDD - No Hard Drive Found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDD - Smart Errors Reported</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDD - BusyBox Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSD - BusyBox Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OS - FSCK screen: Unable to Repair (Press F1 to Fix)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OS - Grub Rescue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OS - Hang on Boot Process: Will not load BSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display - No Video Output</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display - Color Output Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display - Lines through the Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display - No Audio Output</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispaly - RS232: No Control Output/Input</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispaly - Damaged Bezel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display - Damaged Screen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint Modem - DOA at Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinic - Deinstallation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint Modem - No Broadband Connection (Standard Antenna)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cicat - Switch to Dedicated Line</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Equipment Repair Log</label>
    <nameField>
        <displayFormat>EquipRepairLog-{000000}</displayFormat>
        <label>Equipment Repair Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment Repair Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>